fix: overflow-y scrollbar fix

--- a/Day 88 - Cafe & Wifi website database/static/css/style.css
+++ b/Day 88 - Cafe & Wifi website database/static/css/style.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6, p {
     inset: 0;
     background: radial-gradient(ellipse, #38220f 1%, black 100%);
     padding-bottom: 50px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .title {
